# django_ninja

./: .gitignore  like.sh  manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
django_ninja/: asgi.py  settings.py  urls.py  wsgi.py
tabom/apis/v1/: article_router.py  like_router.py
tabom/migrations/: 0001_initial.py  0002_alter_article_created_at_alter_article_updated_at_and_more.py  0003_like_unique_user_article.py  0004_article_like_count.py
tabom/models/: like.py
tabom/services/: article_service.py  like_service.py  signals.py
tabom/tests/: __init__.py  test_article_service.py  test_auto_noew.py  test_cascade.py  test_like_service.py
tabom/tests/apis/v1/: test_article_router.py  test_like_router.py
tabom/tests/services/: test_article_service.py  test_like_service.py
